prevent bg from jumping

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -45,6 +45,8 @@ nav {
     min-width: 100%;
     height: 100vh;
     width: 100vw;
+    transition-duration: 400ms;
+    transition-property: height;
 }
 
 div[class*=img-waterandhill] {
